# internatlas-pkg

./: README.md  pyproject.toml
.github/workflows/: hourly-sync.yml
data/internships/1x/: 1x-ai-residency-intern-2026.json
data/internships/abb/: abb-application-engineering-intern-2026.json
data/internships/abc-news/: abc-news-product-management-and-engineering-intern-2027.json
data/internships/abundant/: abundant-software-engineering-intern-research-focused-2027.json
data/internships/accenture/: accenture-software-engineer-intern-2026.json  accenture-technology-apprentice-intern-2026.json
data/internships/aclu-kentucky/: aclu-kentucky-undergraduate-intern-technology-and-analytics-department-edu-2026.json
data/internships/ada/: ada-software-engineer-intern-2026.json
data/internships/adobe/: adobe-ai-ml-intern-machine-learning-engineer-researcher-intern-2026.json
data/internships/airbnb/: airbnb-sales-operations-intern-italy-2027.json
data/internships/akuna-capital/: akuna-capital-hardware-engineer-intern-summer-2027-2027.json  akuna-capital-platform-engineer-intern-summer-2027-2027.json  akuna-capital-quantitative-development-strategy-intern-summer-2027-2027.json  akuna-capital-quantitative-research-intern-summer-2027-2027.json  akuna-capital-software-engineer-intern-c-net-desktop-summer-2027-2027.json  akuna-capital-software-engineer-intern-c-summer-2027-2027.json  akuna-capital-software-engineer-intern-full-stack-web-summer-2027-2027.json  akuna-capital-software-engineer-intern-python-summer-2027-2027.json
src/internatlas/: ingest.py
(+788 files in other folders)
