[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "internatlas"
version = "1.0.0"
description = "A git-native data platform for tracking Summer 2027 internships"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.5",
  "requests>=2.31",
  "PyYAML>=6.0",
  "tzdata>=2024.1",   # ensures the America/New_York zone resolves on any runner
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
internatlas = "internatlas.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
